--- a/base/src/main/res/layout/activity_webview.xml
+++ b/base/src/main/res/layout/activity_webview.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.jamesfchen.h5container.PWebView
+    <com.jamesfchen.widget.PWebView
         android:id="@+id/wv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
