--- a/components/home-module/src/main/assets/test.html
+++ b/components/home-module/src/main/assets/test.html
@@ -35,5 +35,17 @@
 <button type="button" id="bt3" onclick="closePage()">close detail page</button>
 
 <a href="ispacecraft://a.spacecraft.com">open detail page</a>
+
+<a href="https://example.com" download="new_file">download file</a>
+
+<video
+        controls
+        src="https://archive.org/download/BigBuckBunny_124/Content/big_buck_bunny_720p_surround.mp4"
+        poster="https://peach.blender.org/wp-content/uploads/title_anouncement.jpg?x11217"
+        width="620">
+    抱歉，你的浏览器不支持嵌入式视频，不过不用担心，你可以
+    <a href="https://archive.org/details/BigBuckBunny_124">下载</a>
+    并用你最喜欢的视频播放器观看！
+</video>
 </body>
 </html>
