--- a/base/src/main/res/values-v21/themes.xml
+++ b/base/src/main/res/values-v21/themes.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!--<style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">-->
-    </style>
+<!--    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">-->
+<!--    </style>-->
+<!--        &lt;!&ndash;<style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">&ndash;&gt;-->
 
     <style name="AppTheme.BarsTransparent">
         <!--设置状态栏和导航栏为全透明-->
