--- a/components/home-module/src/main/res/navigation/nav_main.xml
+++ b/components/home-module/src/main/res/navigation/nav_main.xml
@@ -4,55 +4,102 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_main"
     app:startDestination="@id/dest_blank_splash">
+    <!--    闪屏页-->
     <fragment
         android:id="@+id/dest_blank_splash"
-        android:name="com.electrolytej.main.page.BlankSplashFragment"
+        android:name="com.electrolytej.main.page.blanksplash.BlankSplashFragment"
         android:label="fragment_blank_splash"
-        tools:layout="@layout/fragment_blank_splash">
-        <action
-            android:id="@+id/action_screen"
-            app:destination="@+id/dest_screen"
-            app:popUpTo="@+id/dest_blank_splash"
-            app:popUpToInclusive="true" />
-        <action
-            android:id="@+id/action_ad_splash"
-            app:destination="@+id/dest_ad_splash"
-            app:popUpTo="@+id/dest_blank_splash"
-            app:popUpToInclusive="true" />
-        <action
-            android:id="@+id/action_welcome_splash"
-            app:destination="@+id/dest_welcome_splash"
-            app:popUpTo="@+id/dest_blank_splash"
-            app:popUpToInclusive="true" />
-    </fragment>
+        tools:layout="@layout/fragment_blank_splash"></fragment>
     <fragment
         android:id="@+id/dest_ad_splash"
         android:name="com.electrolytej.main.page.ad.AdFragment"
         android:label="fragment_ad_splash"
-        tools:layout="@layout/fragment_ad">
-        <action
-            android:id="@+id/action_screen"
-            app:destination="@+id/dest_screen"
-            app:popUpTo="@+id/dest_ad_splash"
-            app:popUpToInclusive="true" />
-    </fragment>
+        tools:layout="@layout/fragment_ad"></fragment>
     <fragment
         android:id="@+id/dest_welcome_splash"
         android:name="com.electrolytej.main.page.welcome.WelcomeFragment"
         android:label="fragment_welcome_splash"
-        tools:layout="@layout/fragment_welcome">
+        tools:layout="@layout/fragment_welcome"></fragment>
+    <!--    首页-->
+    <fragment
+        android:id="@+id/dest_home"
+        android:name="com.electrolytej.main.page.home.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home">
         <action
-            android:id="@+id/action_screen"
-            app:destination="@+id/dest_screen"
-            app:popUpTo="@+id/dest_welcome_splash"
+            android:id="@+id/action_webview"
+            app:destination="@+id/dest_fragment_webview"
+            app:popUpTo="@+id/dest_home"
             app:popUpToInclusive="true" />
     </fragment>
+    <!--    信息流-->
+    <fragment
+        android:id="@+id/dest_new_feeds"
+        android:name="com.electrolytej.feeds.page.newfeeds.NewFeedsFragment"
+        android:label="fragment_newfeeds"></fragment>
+    <fragment
+        android:id="@+id/dest_video_feeds"
+        android:name="com.electrolytej.feeds.page.videofeeds.VideoFeedsFragment"
+        android:label="fragment_videofeeds"></fragment>
+    <!--    通知-->
+    <fragment
+        android:id="@+id/dest_infos"
+        android:name="com.electrolytej.main.page.notification.InfosFragment"
+        android:label="fragment_infos"
+        tools:layout="@layout/fragment_infos"></fragment>
+    <!--    多窗口-->
+    <fragment
+        android:id="@+id/dest_windows"
+        android:name="com.electrolytej.main.page.window.WindowFragment"
+        android:label="fragment_window"
+        tools:layout="@layout/fragment_window"></fragment>
+
+    <!--    个人中心-->
+    <fragment
+        android:id="@+id/dest_profile"
+        android:name="com.electrolytej.main.page.profile.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile">
+        <!--app:destination="@id/flow_step_two_dest"/>-->
+        <!--NavController-->
+        <action
+            android:id="@+id/action_privacy_policy"
+            app:destination="@+id/dest_privacy_policy" />
+        <action
+            android:id="@+id/action_change_icon"
+            app:destination="@+id/dest_change_icon" />
+    </fragment>
+    <activity
+        android:id="@+id/dest_privacy_policy"
+        android:name="com.electrolytej.main.page.profile.PrivacyPolicyActivity"
+        android:label="activity_privacy_policy">
+        <argument
+            android:name="url"
+            android:defaultValue="file:///android_asset/test.html" />
+        <!--            android:defaultValue="https://i.spacecraft.com/c/ZDg0Y2FhNjMt"-->
+    </activity>
+    <activity
+        android:id="@+id/dest_change_icon"
+        android:name="com.electrolytej.main.page.profile.ChangeIconActivity"
+        android:label="changeIcon"></activity>
+
+
+    <activity
+        android:id="@+id/dest_bundle2"
+        android:name="com.jamesfchen.bundle2.page.Bundle2Activity"
+        android:label="activity_bundle2"></activity>
 
     <fragment
-        android:id="@+id/dest_screen"
-        android:name="com.electrolytej.main.page.MainScreenFragment"
-        android:label="fragment_screen"
-        tools:layout="@layout/fragment_screen">
-
+        android:id="@+id/dest_fragment_webview"
+        android:name="com.electrolytej.fragment.WebFragment"
+        android:label="fragment_webview"
+        tools:layout="@layout/fragment_webview">
+        <argument
+            android:name="url"
+            android:defaultValue="https://www.baidu.com" />
     </fragment>
+    <activity
+        android:id="@+id/dest_activity_webview"
+        android:name="com.electrolytej.activity.WebActivity"
+        android:label="activity_webview"></activity>
 </navigation>
