--- a/components/home-module/src/main/res/layout/fragment_browser.xml
+++ b/components/home-module/src/main/res/layout/fragment_browser.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="视频流页面"
+        android:text="搜索"
         android:textSize="40sp" />
 
 </FrameLayout>
