--- a/components/home-module/src/main/res/layout/activity_main.xml
+++ b/components/home-module/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fragment_nav_host"
-        app:menu="@menu/menu_screen" />
+        app:menu="@menu/menu_main" />
     <!--android:background="?android:attr/windowBackground"-->
     <!--app:itemIconTint="@color/bottom_navigation_colors"-->
     <!--app:itemTextColor="@color/bottom_navigation_colors"-->
