--- a/components/home-module/src/main/assets/test.html
+++ b/components/home-module/src/main/assets/test.html
@@ -28,7 +28,7 @@
 <body>
 <img width="90" height="100" src="file:///android_asset/images/lit_pier.jpg">
 <img width="90" height="100" src="images/jetpack.png">
-<img src="tenor.gif">
+<img src="raw/tenor.gif">
 
 <button type="button" id="bt" onclick="readAndWriteStorage()">read and write storage</button>
 <button type="button" id="bt2" onclick="openDetail()">open detail page</button>
