--- a/components/feeds-module/src/main/res/layout/item_photo_text.xml
+++ b/components/feeds-module/src/main/res/layout/item_photo_text.xml
@@ -25,17 +25,39 @@
         app:layout_constraintBottom_toTopOf="@+id/ilv_photo_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_index"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:background="@color/apricot"
+        tools:layout_height="200dp" />
 
     <com.electrolytej.feeds.widget.PhotoListView
         android:id="@+id/ilv_photo_list"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@id/ll_developer_info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/tv_text"
         app:layout_constraintTop_toBottomOf="@+id/tv_text"
         tools:background="@color/apricot"
-        tools:layout_height="200dp"
-        tools:layout_width="200dp" />
+        tools:layout_height="200dp" />
+
+    <LinearLayout
+        android:id="@+id/ll_developer_info"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/ilv_photo_list"
+        app:layout_constraintTop_toBottomOf="@+id/ilv_photo_list"
+        tools:layout_height="200dp">
+
+        <com.electrolytej.feeds.widget.DownloadButton
+            android:id="@+id/bt_download"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:background="@color/apricot"
+            tools:layout_height="20dp"
+            tools:layout_width="20dp" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
