--- a/modules/main-module/src/main/res/layout/fragment_ad.xml
+++ b/modules/main-module/src/main/res/layout/fragment_ad.xml
@@ -1,74 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/ad_splash">
+    android:layout_height="match_parent">
     <!--    android:background="@android:color/black"-->
 
-    <Button
-        android:id="@+id/bt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="ad"
-        android:textSize="30sp"
+    <!--    <Button-->
+    <!--        android:id="@+id/bt"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_gravity="center"-->
+    <!--        android:text="ad"-->
+    <!--        android:textSize="30sp"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintHorizontal_weight="1"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toTopOf="parent"-->
+    <!--        app:layout_constraintVertical_weight="1" />-->
+
+    <com.electrolytej.main.widget.ShinyAdView
+        android:id="@+id/sv_shiny"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_weight="1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_weight="1" />
-
-
-    <ImageView
-        android:id="@+id/iv_breathe"
-        android:layout_width="104dp"
-        android:layout_height="match_parent"
-        android:src="@drawable/p_vector_drawable"
-        android:translationX="104dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:translationX="0dp" />
-
-    <ImageView
-        android:id="@+id/iv_breathe2"
-        android:layout_width="104dp"
-        android:layout_height="match_parent"
-        android:src="@drawable/p_vector_drawable"
-        android:translationX="104dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:translationX="0dp" />
-
-    <TextView
-        android:alpha="0"
-        android:id="@+id/tv_intro"
-        android:layout_width="15dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="右\n滑\n跳\n转\n至\n第\n三\n方\n页\n面"
-        android:textColor="#FFFFFF"
-        android:textFontWeight="500"
-        android:textSize="15sp"
-        android:translationX="-20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_weight="1"
-        tools:translationX="-45dp"
-        />
-
-    <ImageView
-        android:id="@+id/iv_enter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:src="@drawable/ic_enter"
-        android:translationX="-20dp"
-        app:layout_constraintEnd_toEndOf="@id/tv_intro"
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toStartOf="@id/tv_intro"
-        app:layout_constraintTop_toBottomOf="@id/tv_intro"
-        tools:translationX="-45dp"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
