--- a/modules/main-module/src/main/res/layout/activity_web_search.xml
+++ b/modules/main-module/src/main/res/layout/activity_web_search.xml
@@ -13,8 +13,16 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:orientation="vertical"
         android:layout_height="wrap_content">
-
+        <TextView
+            android:id="@+id/tv_ad"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:iconifiedByDefault="false"
+            android:lines="2"
+            android:textSize="90sp"
+            android:text="adasdfadsfsdf" />
         <SearchView
             android:id="@+id/sv_search"
             android:layout_width="match_parent"
