--- a/modules/main-module/src/main/res/layout/activity_web_search.xml
+++ b/modules/main-module/src/main/res/layout/activity_web_search.xml
@@ -15,6 +15,12 @@
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="wrap_content">
+        <View
+            android:id="@+id/v_ad"
+            android:layout_margin="10dp"
+            android:background="@drawable/bg_stroke"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"/>
         <TextView
             android:id="@+id/tv_ad"
             android:layout_width="match_parent"
