--- a/modules/main-bundle/src/main/res/menu/menu_main.xml
+++ b/modules/main-bundle/src/main/res/menu/menu_main.xml
@@ -8,19 +8,10 @@
     <item
         android:id="@+id/dest_feeds"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="信息流" />
+        android:title="流内容" />
     <!--    <item-->
     <!--        android:id="@+id/dest_editor"-->
     <!--        android:icon="@drawable/ic_baseline_add_24" />-->
-    <item
-        android:id="@+id/dest_infos"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="消息" />
-
-    <item
-        android:id="@+id/dest_profile"
-        android:icon="@drawable/ic_person_black_24dp"
-        android:title="我" />
     <!--    <item-->
     <!--        android:id="@+id/dest_windows"-->
     <!--        android:icon="@drawable/ic_window_24"-->
@@ -30,4 +21,13 @@
         android:id="@+id/dest_bundle2"
         android:icon="@drawable/ic_baseline_add_24"
         android:title="bundle2" />
+    <item
+        android:id="@+id/dest_infos"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="消息" />
+
+    <item
+        android:id="@+id/dest_profile"
+        android:icon="@drawable/ic_person_black_24dp"
+        android:title="我" />
 </menu>
