--- a/modules/main-module/src/main/res/layout/fragment_browser.xml
+++ b/modules/main-module/src/main/res/layout/fragment_browser.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:orientation="vertical">
 
     <Button
@@ -11,5 +12,11 @@
         android:layout_gravity="center"
         android:text="搜索"
         android:textSize="40sp" />
+
+
+    <ImageView
+        android:id="@+id/iv_p"
+        android:layout_width="36dp"
+        android:layout_height="36dp"/>
 
 </FrameLayout>
