--- a/modules/hotel-bundle2/src/main/res/values/styles.xml
+++ b/modules/hotel-bundle2/src/main/res/values/styles.xml
@@ -4,4 +4,11 @@
 -->
 <resources>
     <style name="MyTheme.Dialog" parent="Theme.AppCompat.Light.Dialog"></style>
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+    </style>
 </resources>
